Bug 74057 - UI: Autocorrect Replacement Table. 'Replace' text is truncated to the left (Impress, Calc, Draw)
Summary: UI: Autocorrect Replacement Table. 'Replace' text is truncated to the left (I...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.3 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.3.0 target:4.2.1
Keywords: regression
: 74214 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-25 21:00 UTC by John
Modified: 2014-02-01 14:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot depicting problem described under Mint16x64 (944.00 KB, image/png)
2014-01-25 21:00 UTC, John
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John 2014-01-25 21:00:18 UTC
Created attachment 92785 [details]
Screenshot depicting problem described under Mint16x64

Problem description: Presentations

Steps to reproduce:
1. Tools|Autocorrect|Replace
2. wordlist is truncated to the left
3. also autocorrect doesn't work in presentations. Words are underlined but no correction occurs even when the word is in the list
4. pressing F7 in Presentation cases a total LO crash in Mint16x64. No error messages just a complete exit requiring a restart

Current behavior: as above. Problem occurs in Mint x64, Win8.1x64, Win7x64

Expected behavior: all words in wordlist should be visible. No crash on F7. Autocorrect should work.

              
Operating System: Linux (Other)
Version: 4.2.0.3 rc
Last worked in: 4.1.4.2 release
Comment 1 tommy27 2014-01-26 07:44:40 UTC
@John
thanks for your report and screenshot.
however the policy here is to file a single bug per report.

so let's focus on the first issue you report (point 1 and 2), which is the abnormal look of the autocorrect replacement list.

from your screenshot I see that the first letter of the left column is cut.
I do not reproduce it under Win7 64bit with 4.1.4.2 and 4.2.1.0.0+ (*)

is this UI issue just a Linux thing or do you see it on Windows as well?

regarding point 3 and 4, autocorrect issues on Impress you should open 2 new separate reports.


(*) Build ID: 88cd9632e081f5839cf9fddf60cbff0c099e2968
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-01-09_22:46:56
Comment 2 Jean-Baptiste Faure 2014-01-26 10:21:59 UTC
I reproduce the problem (wordlist truncated in auto-correction configuration dialog) with version 4.2.0.3.0+ on Ubuntu 13.10 x86-64.
This bug affects only Impress/Draw and Calc modules but not Writer.

@tommy27: did you test on Impress module?

Set status to NEW. Added UI and .ui expert in cc.

Best regards. JBF
Comment 3 tommy27 2014-01-26 22:55:53 UTC
@JBF
you are right. bug is not present in Writer but affects all other modules.

reproduced with 4.2.1.0.0+ works fine with 4.1.4.2
regression
Comment 4 Commit Notification 2014-01-27 12:14:25 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58dfc97ca697875c36b7ddf14f5505a93d7b9cf8

Resolves: fdo#74057 wordlist truncated on left



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-01-27 13:01:49 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1abf248b24d0804bed361acdb4052cefbd1a918f&h=libreoffice-4-2

Resolves: fdo#74057 wordlist truncated on left


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 tommy27 2014-01-27 23:57:13 UTC
please consider picking the fix in 4.2.0 as well in case an RC4 will be added before final 4.2.0 release
Comment 7 Jacques Guilleron 2014-01-30 01:00:19 UTC
Hi all,

I have just downloaded LO 4.0.2.4 pre-release and this is not fixed into this version. Is it possible to port the patch before 13h in this release?

Thanks,

Jacques
Comment 8 tommy27 2014-01-30 01:26:21 UTC
probably 4.2.0 RC4 will be the last version and is going to become final with no further updates.

the fix is already in 4.2.1 so you have to wait another month to see it.
https://wiki.documentfoundation.org/ReleasePlan#4.2_release
Comment 9 manj_k 2014-01-30 10:32:20 UTC
*** Bug 74214 has been marked as a duplicate of this bug. ***
Comment 10 Jean-Baptiste Faure 2014-02-01 14:58:33 UTC
Verified in Calc, and Impress/Draw for LO 4.2.1.0.0+ on Ubuntu 13.10 with FR User Interface.

Thank you very much.
Best regards. JBF