Resolves: fdo#74057 wordlist truncated on left

Change-Id: Ia6b8c02fc0d79fef974f5a0462856f05256c76f8